--- a/package.json
+++ b/package.json
@@ -5,24 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 5001",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "boxicons": "^2.1.4",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "@types/node": "20.5.0",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.16",
+    "next": "13.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.60.0",
-    "typescript": "5.0.2"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "react-test-renderer": "^18.2.0"
+    "sass": "^1.65.1",
+    "typescript": "5.1.6"
   }
 }
